# serializer version: 1
# name: test_enable_output
  '''
  ```{mermaid}
  graph LR
      N0("Group Input"):::default-node
      N1("Cube"):::geometry-node
      N2("Ico Sphere"):::geometry-node
      N3("Enable Output"):::default-node
      N4("Enable Output"):::default-node
      N5("Group Output"):::default-node
      N0 -->|"Boolean->Enable"| N3
      N1 -->|"Mesh->Value"| N3
      N3 -->|"Value->Cube"| N5
      N4 -->|"Value->IcoSphere"| N5
      N0 -->|"Boolean->Enable"| N4
      N2 -->|"Mesh->Value"| N4
  ```
  '''
# ---
# name: test_float_socket_methods
  '''
  ```{mermaid}
  graph LR
      N0("Value"):::input-node
      N1("Math<br/><small>(SNAP)</small>"):::converter-node
      N2("Math<br/><small>(EXPONENT)</small>"):::converter-node
      N3("Math<br/><small>(ARCSINE)</small>"):::converter-node
      N4("Math<br/><small>(POWER)</small>"):::converter-node
      N5("Math<br/><small>(RADIANS)</small>"):::converter-node
      N6("Math<br/><small>(ARCTANGENT)</small>"):::converter-node
      N7("Math<br/><small>(DEGREES)</small>"):::converter-node
      N8("Math<br/><small>(MINIMUM)</small>"):::converter-node
      N9("Math<br/><small>(MULTIPLY)</small>"):::converter-node
      N10("Math<br/><small>(TRUNC)</small>"):::converter-node
      N11("Math<br/><small>(SQRT)</small>"):::converter-node
      N12("Math<br/><small>(COSH)</small>"):::converter-node
      N13("Math<br/><small>(SIGN)</small>"):::converter-node
      N14("Math<br/><small>(MULTIPLY_ADD)</small>"):::converter-node
      N15("Value to String"):::converter-node
      N16("Math<br/><small>(COSINE)</small>"):::converter-node
      N17("Math<br/><small>(MAXIMUM)</small>"):::converter-node
      N18("Math<br/><small>(LOGARITHM)</small>"):::converter-node
      N19("Math<br/><small>(ABSOLUTE)</small>"):::converter-node
      N20("Math<br/><small>(TANH)</small>"):::converter-node
      N21("Math<br/><small>(TANGENT)</small>"):::converter-node
      N22("Math<br/><small>(SINE)</small>"):::converter-node
      N23("Math<br/><small>(PINGPONG)</small>"):::converter-node
      N24("Math<br/><small>(ARCTAN2)</small>"):::converter-node
      N25("Math<br/><small>(SINH)</small>"):::converter-node
      N26("Math<br/><small>(FRACT)</small>"):::converter-node
      N27("Math<br/><small>(ARCCOSINE)</small>"):::converter-node
      N0 -->|"Value->Value"| N9
      N0 -->|"Value->Value"| N15
      N0 -->|"Value->Value"| N13
      N0 -->|"Value->Value"| N8
      N0 -->|"Value->Value"| N17
      N0 -->|"Value->Value"| N22
      N0 -->|"Value->Value"| N16
      N0 -->|"Value->Value"| N21
      N0 -->|"Value->Value"| N3
      N0 -->|"Value->Value"| N27
      N0 -->|"Value->Value"| N6
      N0 -->|"Value->Value"| N25
      N0 -->|"Value->Value"| N12
      N0 -->|"Value->Value"| N20
      N0 -->|"Value->Value"| N24
      N0 -->|"Value->Value"| N11
      N0 -->|"Value->Value"| N4
      N0 -->|"Value->Value"| N18
      N0 -->|"Value->Value"| N2
      N0 -->|"Value->Value"| N7
      N0 -->|"Value->Value"| N5
      N0 -->|"Value->Value"| N14
      N0 -->|"Value->Value"| N23
      N0 -->|"Value->Value"| N1
      N0 -->|"Value->Value"| N10
      N0 -->|"Value->Value"| N26
      N0 -->|"Value->Value"| N19
  ```
  '''
# ---
# name: test_list_slicing
  '''
  ```{mermaid}
  graph LR
      N0("Index"):::input-node
      N1("Field to List"):::converter-node
      N2("List Length"):::converter-node
      N3("Slice to Indices"):::converter-node
      N4("Get List Item"):::converter-node
      N0 -->|"Index->Index"| N1
      N1 -->|"Index->List"| N2
      N2 -->|"Length->Stop"| N3
      N1 -->|"Index->List"| N4
      N3 -->|"Indices->Index"| N4
  ```
  '''
# ---
# name: test_socket_builder_reference
  '''
  ```{mermaid}
  graph LR
      N0("Position"):::input-node
      N1("Spline Parameter"):::input-node
  ```
  '''
# ---
# name: test_string_socket_methods
  '''
  ```{mermaid}
  graph LR
      N0("Group Input"):::default-node
      N1("Match String"):::converter-node
      N2("Match String"):::converter-node
      N3("Match String"):::converter-node
      N4("Slice String"):::converter-node
      N5("Replace String"):::converter-node
      N6("String Length"):::converter-node
      N7("String"):::input-node
      N8("Join Strings"):::converter-node
      N9("String"):::input-node
      N10("Join Strings"):::converter-node
      N11("String"):::input-node
      N12("Join Strings"):::converter-node
      N13("Replace String"):::converter-node
      N14("Slice String"):::converter-node
      N15("Join Strings"):::converter-node
      N16("String"):::input-node
      N17("Slice String"):::converter-node
      N18("Join Strings"):::converter-node
      N19("String"):::input-node
      N20("String"):::input-node
      N21("String Length"):::converter-node
      N0 -->|"String->String"| N1
      N0 -->|"String->String"| N2
      N0 -->|"String->String"| N3
      N0 -->|"String->String"| N4
      N0 -->|"String->String"| N5
      N0 -->|"String->String"| N6
      N0 -->|"String->Strings"| N8
      N7 -->|"String->Strings"| N8
      N9 -->|"String->Strings"| N10
      N0 -->|"String->Strings"| N10
      N11 -->|"String->Delimiter"| N12
      N4 -->|"String->Strings"| N12
      N5 -->|"String->Strings"| N12
      N10 -->|"String->Strings"| N12
      N0 -->|"String->String"| N13
      N13 -->|"String->String"| N14
      N14 -->|"String->Delimiter"| N15
      N16 -->|"String->Strings"| N15
      N15 -->|"String->String"| N17
      N17 -->|"String->Delimiter"| N18
      N20 -->|"String->Strings"| N18
      N19 -->|"String->Strings"| N18
      N18 -->|"String->String"| N21
  ```
  '''
# ---
# name: test_vector_socket_input_methods
  '''
  ```{mermaid}
  graph LR
      N0("Combine XYZ"):::converter-node
      N1("Set Position"):::geometry-node
      N0 -->|"Vector->Offset"| N1
  ```
  '''
# ---
# name: test_vector_socket_methods
  '''
  ```{mermaid}
  graph LR
      N0("Group Input"):::default-node
      N1("Vector Math<br/><small>(NORMALIZE)</small>"):::vector-node
      N2("Vector Math<br/><small>(NORMALIZE)</small>"):::vector-node
      N3("Vector"):::input-node
      N4("Vector Math<br/><small>(DOT_PRODUCT)</small>"):::vector-node
      N5("Vector"):::input-node
      N6("Vector Math<br/><small>(DOT_PRODUCT)</small>"):::vector-node
      N7("Vector Math<br/><small>(LENGTH)</small>"):::vector-node
      N8("Vector Math<br/><small>(LENGTH)</small>"):::vector-node
      N9("Vector Math<br/><small>(SCALE)</small><br/><small>×2</small>"):::vector-node
      N0 -->|"Vector->Vector"| N1
      N0 -->|"Vector->Vector"| N2
      N0 -->|"Vector->Vector"| N4
      N3 -->|"Vector->Vector"| N4
      N0 -->|"Vector->Vector"| N6
      N5 -->|"Vector->Vector"| N6
      N0 -->|"Vector->Vector"| N7
      N0 -->|"Vector->Vector"| N8
      N0 -->|"Vector->Vector"| N9
  ```
  '''
# ---
